Attempt a fix for not-tall-enough pages on mobile

--- a/src/furo/assets/styles/_layout.scss
+++ b/src/furo/assets/styles/_layout.scss
@@ -7,7 +7,9 @@ body {
 }
 .page {
   display: flex;
-  min-height: 100vh; // fill the viewport for pages with little content.
+  // fill the viewport for pages with little content.
+  min-height: calc(100vh - (100vh - 100%));
+  min-height: 100vh;
 }
 header {
   width: 100vw;
